[metadata]
name = pycify
version = 1.0.1
description = Convert your entire Python project to .pyc files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/pycify
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    pycify=pycify.cli:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
pycify =
	py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
